--- a/app/src/main/res/layout/fragment_room_one.xml
+++ b/app/src/main/res/layout/fragment_room_one.xml
@@ -58,7 +58,6 @@
         android:id="@+id/firstCloset"
         android:layout_width="117dp"
         android:layout_height="158dp"
-        android:background="@drawable/trash"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +82,6 @@
         android:id="@+id/firstReader"
         android:layout_width="49dp"
         android:layout_height="59dp"
-        android:background="@drawable/trash"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.601"
@@ -110,5 +108,16 @@
         android:background="@drawable/watering"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.example.far_faraway.Object
+        android:id="@+id/firstDoor"
+        android:layout_width="144dp"
+        android:layout_height="204dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.456"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.318" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
