--- a/app/src/main/res/layout/activity_scene.xml
+++ b/app/src/main/res/layout/activity_scene.xml
@@ -26,7 +26,7 @@
 
         <ImageButton
             android:id="@+id/inv_1"
-            android:layout_width="match_parent"
+            android:layout_width="113dp"
             android:layout_height="100dp"
             android:layout_weight=".2"
             android:adjustViewBounds="true"
@@ -36,7 +36,7 @@
 
         <ImageButton
             android:id="@+id/inv_2"
-            android:layout_width="match_parent"
+            android:layout_width="113dp"
             android:layout_height="100dp"
             android:layout_weight=".2"
             android:adjustViewBounds="true"
@@ -46,7 +46,7 @@
 
         <ImageButton
             android:id="@+id/inv_3"
-            android:layout_width="match_parent"
+            android:layout_width="113dp"
             android:layout_height="100dp"
             android:layout_weight=".2"
             android:adjustViewBounds="true"
@@ -56,7 +56,7 @@
 
         <ImageButton
             android:id="@+id/inv_4"
-            android:layout_width="match_parent"
+            android:layout_width="113dp"
             android:layout_height="100dp"
             android:layout_weight=".2"
             android:adjustViewBounds="true"
