--- a/app/src/main/res/layout/fragment_first_table.xml
+++ b/app/src/main/res/layout/fragment_first_table.xml
@@ -1,80 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Puzzles.FirstTable">
 
-    <com.example.far_faraway.Object
-        android:id="@+id/firstTableBack"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+    <ImageButton
+        android:id="@+id/firstTableBG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="628dp"
-        android:layout_marginTop="328dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:background="@drawable/bg_table" />
+
+    <com.example.far_faraway.Object
+        android:id="@+id/firstTableBack"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
         android:background="@drawable/back"
         android:contentDescription="@string/app_name" />
 
     <com.example.far_faraway.Holder
         android:id="@+id/firstTableMixer"
-        android:layout_width="95dp"
-        android:layout_height="104dp"
+        android:layout_width="362px"
+        android:layout_height="639px"
+        android:layout_alignTop="@+id/firstTableHolderBack"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="-30dp"
+        android:layout_toEndOf="@+id/firstTableHolderBack"
+        android:background="@drawable/table_mixer_1"
+        android:contentDescription="@string/app_name" />
+
+    <ImageButton
+        android:id="@+id/firstTableHolderBack"
+        android:layout_width="955px"
+        android:layout_height="531px"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="514dp"
-        android:layout_marginTop="142dp"
-        android:background="@drawable/can_0"
-        android:contentDescription="@string/app_name" />
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="124dp"
+        android:background="@drawable/table_holder_back" />
 
     <com.example.far_faraway.Object
         android:id="@+id/firstTableFlask_1"
-        android:layout_width="88dp"
-        android:layout_height="123dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="206px"
+        android:layout_height="618px"
+        android:layout_alignStart="@+id/firstTableHolderBack"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="59dp"
-        android:layout_marginTop="138dp"
-        android:background="@drawable/flask" />
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="65dp"
+        android:background="@drawable/table_flask_1" />
 
     <com.example.far_faraway.Object
         android:id="@+id/firstTableFlask_2"
-        android:layout_width="88dp"
-        android:layout_height="123dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="156dp"
-        android:layout_marginTop="138dp"
-        android:background="@drawable/flask" />
+        android:layout_width="206px"
+        android:layout_height="618px"
+        android:layout_alignTop="@+id/firstTableFlask_1"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="0dp"
+        android:layout_toEndOf="@+id/firstTableFlask_1"
+        android:background="@drawable/table_flask_2" />
 
     <com.example.far_faraway.Object
         android:id="@+id/firstTableFlask_3"
-        android:layout_width="88dp"
-        android:layout_height="123dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="252dp"
-        android:layout_marginTop="139dp"
-        android:background="@drawable/flask" />
+        android:layout_width="206px"
+        android:layout_height="618px"
+        android:layout_alignTop="@+id/firstTableFlask_2"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="0dp"
+        android:layout_toEndOf="@+id/firstTableFlask_2"
+        android:background="@drawable/table_flask_3" />
 
-    <com.example.far_faraway.Object
-        android:id="@+id/firstTableClear"
-        android:layout_width="70dp"
-        android:layout_height="90dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="622dp"
-        android:layout_marginTop="39dp"
-        android:background="@drawable/trash" />
+    <ImageButton
+        android:id="@+id/firstTableHolderFront"
+        android:layout_width="955px"
+        android:layout_height="64px"
+        android:translationZ="5dp"
+        android:layout_alignStart="@+id/firstTableHolderBack"
+        android:layout_alignTop="@+id/firstTableHolderBack"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/table_holder_front" />
 
     <com.example.far_faraway.Object
         android:id="@+id/firstTableAnti"
-        android:layout_width="88dp"
-        android:layout_height="123dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="514dp"
-        android:layout_marginTop="132dp"
-        android:background="@drawable/iron" />
+        android:layout_width="362px"
+        android:layout_height="639px"
+        android:layout_alignTop="@+id/firstTableHolderBack"
+        android:layout_marginStart="65dp"
+        android:layout_marginTop="-30dp"
+        android:layout_toEndOf="@+id/firstTableHolderBack"
+        android:background="@drawable/table_mixer_5" />
 
 </RelativeLayout>
