--- a/app/src/main/res/layout/activity_ending.xml
+++ b/app/src/main/res/layout/activity_ending.xml
@@ -6,11 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".Ending">
 
+    <ImageButton
+        android:id="@+id/endBG"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#244573"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
     <TextView
         android:id="@+id/endText"
-        android:layout_width="179dp"
-        android:layout_height="22dp"
+        android:layout_width="589dp"
+        android:layout_height="58dp"
         android:text="Thank you for playing, ***"
+        android:textSize="50px"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/endAchievements"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,8 +32,8 @@
 
     <com.example.far_faraway.Object
         android:id="@+id/endBack"
-        android:layout_width="137dp"
-        android:layout_height="50dp"
+        android:layout_width="150dp"
+        android:layout_height="136dp"
         android:background="@drawable/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
