--- a/app/src/main/res/layout/fragment_acception.xml
+++ b/app/src/main/res/layout/fragment_acception.xml
@@ -43,6 +43,7 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:textStyle="bold"
+        android:textSize="50px"
         android:text="Is your friend ready to go forward?"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
