--- a/app/src/main/res/layout/activity_scene.xml
+++ b/app/src/main/res/layout/activity_scene.xml
@@ -64,6 +64,16 @@
             android:src="@drawable/black"
             app:backgroundTint="#000000" />
 
+        <com.example.far_faraway.Object
+            android:id="@+id/scenePause"
+            android:layout_width="113dp"
+            android:layout_height="100dp"
+            android:layout_weight=".2"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            android:background="@drawable/yes"
+            app:backgroundTint="#000000" />
+
     </LinearLayout>
 
     <androidx.fragment.app.FragmentContainerView
